# CCSD

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  preview.html  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  仮実装計画.md
Docs/: 2026-01-25_残タスク.md  ユーザーマニュアル.md
Docs/mtg/: PM会議議事録_20260125.md  ダッシュボードデザイン会議_20260126.md  提案計画書.md
Docs/plans/: 2026-01-30-dependency-tree-design.md  2026-01-30-新機能（可視化）.md  2026-01-31-git-automation-commands.md  2026-02-04-terminal-integration-design.md
src/: App.tsx  PreviewApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  types.rs  utils.rs
src-tauri/src/commands/: backup.rs  export.rs  favorites.rs  files.rs  import.rs  mod.rs  stats.rs  template.rs  terminal.rs  version.rs  window.rs
src/constants/: api.ts  graph.ts  index.ts  storage.ts  timing.ts  ui.ts
src/data/: templates.ts
src/hooks/: index.ts  useAIReview.ts  useBackup.ts  useClaudeVersion.ts  useDependencyGraph.ts  useDiff.ts  useFavorites.ts  useFileManager.ts  useGitHubRepos.ts  useImport.ts  useKeyboardShortcuts.ts  useLinter.ts  useMarkdownPreview.ts  useMonacoEditor.ts  usePreviewWindow.ts  useQuickCommands.ts  useSearch.ts  useSearchHighlight.ts  useSearchReplace.ts  useStats.ts  useStatsDetail.ts  useTabEditor.ts  useTauri.ts  useTemplate.ts  useTerminal.ts  useTerminalHistory.ts  useTerminalPanel.ts  useTreeFilter.ts  useUIState.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: aiReview.ts  editor.ts  (+13 more)
(+109 files in other folders)
