[package]
name = "claude-setting-dashboard"
version = "0.1.0"
description = "Claude Code設定ファイルを一元管理するダッシュボードアプリ"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
walkdir = "2.5"
chrono = "0.4"
dirs = "5"
zip = "2"
regex = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["sync", "rt"] }
once_cell = "1.19"
